# podtunnel

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: test.yaml
api/: Cargo.toml  helpers.rs  lib.rs
api/wireguard/: addresses.rs  configs.rs  mod.rs  peers.rs
cni/: Cargo.toml  main.rs  specification.rs
cni/operations/: add.rs  check.rs  del.rs  mod.rs
config/crds/: kustomization.yaml  wireguardaddresspools_podtunnel_com.yaml  wireguardconfigs_podtunnel_com.yaml
config/examples/: pod_to_pod_vpn.yaml
docs/: Development.md
drivers/: Cargo.toml  lib.rs
drivers/system/: linux.rs
drivers/wireguard/: key.rs  mod.rs  workflows.rs
operator/: Cargo.toml  main.rs
operator/controllers/: errors.rs  labels.rs  mod.rs
operator/controllers/interface/: mod.rs  reconciler.rs
operator/controllers/ipam/: mod.rs  reconciler.rs
operator/controllers/key/: mod.rs  reconciler.rs
operator/controllers/peer/: mod.rs  reconciler.rs
xtask/: Cargo.toml  main.rs
