[workspace]
members = [
    "api",
    "cni",
    "drivers",
    "operator",
    "xtask",
]
resolver = "2"

[workspace.package]
authors = ["Shane Utt <shaneutt@linux.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/podtunnel/podtunnel"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.97"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
schemars = "0.8.22"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
